--- a/zest-product-api/docker-compose.yml
+++ b/zest-product-api/docker-compose.yml
@@ -6,10 +6,15 @@ services:
     container_name: zest-mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: Root@123
       MYSQL_DATABASE: zestdb
     ports:
       - "3307:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-pRoot@123"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
 
   app:
     build: .
@@ -18,7 +23,8 @@ services:
     ports:
       - "8585:8585"
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/zestdb
       SPRING_DATASOURCE_USERNAME: root
